--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/85e448ed07.js" crossorigin="anonymous"></script>
-    <title>RedberryTest</title>
+    <title>Personal Questionnaire</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
